--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mariadb://localhost:3307/portfolio_db?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=portfolio_user
-spring.datasource.password=portfolio123
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -12,7 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=roopini.812@gmail.com
-spring.mail.password=znpd vjgf wgmr oybm
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
