--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,19 @@
-# Use official Java image
+# ---------- Stage 1: Build ----------
+FROM maven:3.9.6-eclipse-temurin-17 AS build
+
+WORKDIR /app
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# ---------- Stage 2: Run ----------
 FROM eclipse-temurin:17-jdk-alpine
 
-# Set working directory
 WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 
-# Copy project files
-COPY . .
-
-# Build the application
-RUN ./mvnw clean package -DskipTests || mvn clean package -DskipTests
-
-# Expose port
 EXPOSE 8080
 
-# Run the jar
-CMD ["sh", "-c", "java -jar target/*.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
