--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Drive
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
